[package]
name = "hour-calc"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
color-eyre = "0.6.2"
ical = "0.8.0"
tracing = "0.1.37"
chrono = "0.4.23"
tabled = "0.10.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"]}
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"]}
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"]}
itext = { version = "0.2.0", features = ["bundled"] }
tracing-slf4j = "0.1.0"
jni = { version = "0.21.1", features = ["invocation"] }
tempfile = "3.5.0"

[patch.crates-io]
tracing-slf4j = { git = "https://github.com/MrFriendly-B-V/tracing-slf4j" }